# api.ss13.org

./: Cargo.toml  Config.example.toml  config.example.toml
.github/workflows/: build.yml
src/: config.rs  cors.rs  main.rs
src/api/: mod.rs  test_merges.rs
src/api/v1/: autocomplete.rs  common.rs  mod.rs  player.rs  server.rs  verify.rs
src/byond/: error.rs  mod.rs  status.rs  topic.rs
src/database/: error.rs  events.rs  mod.rs  player.rs  state.rs  test_merges.rs  verify.rs
src/http/: byond.rs  discord.rs  error.rs  mod.rs
src/routes/: mod.rs  recent_test_merges.rs
src/routes/v1/: common.rs  mod.rs  server.rs  verify.rs
src/routes/v2/: autocomplete.rs  byond.rs  common.rs  discord.rs  events.rs  mod.rs  patreon.rs  player.rs  server.rs  verify.rs
src/serde/: chrono.rs  mod.rs
