[package]
name = "psychonaut-rocket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.81"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = { version = "0.12.2", features = ["json"] }
rocket = { version = "0.5.0", features = ["json"]}
rocket_cors = "0.6.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.18"
simplelog = { version = "0.12.2", features = ["paris"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "mysql", "chrono"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
toml = "0.8.12"
urlencoding = "2.1.3"
