[package]
name = "psychonaut-api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
chrono = "0.4.40"
color-eyre = "0.6.3"
itertools = "0.14.0"
poem = "3.1.8"
poem-openapi = { version = "5.1.12", features = ["stoplight-elements"] }
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
